# ImWaveviewer

./: .gitmodules  CMakeLists.txt  License.txt  OFDM analysis.md  README.md  main.cpp
gui/: Filename.h  Helpers.cpp  Helpers.h  MainGui.cpp  MainGui.h  Plot.h  PopupsAndModals.cpp  PopupsAndModals.h  PowerSpectrum.cpp  PowerSpectrum.h  Scatterplot.cpp  Scatterplot.h  Spectrogram.cpp  Spectrogram.h  StringTools.h  TimeDomain.cpp  TimeDomain.h
nativefiledialog-extended/src/: nfd_cocoa.m
processing/: AMDetect.cpp  AMDetect.h  AbstractSampleSource.cpp  AbstractSampleSource.h  DDC.cpp  DDC.h  DataTypes.h  FMDetect.cpp  FMDetect.h  Filter.cpp  Filter.h  FilterProc.cpp  FilterProc.h  FreqShift.cpp  FreqShift.h  IO.h  ImagDetect.cpp  ImagDetect.h  InputSource.cpp  InputSource.h  OFDMDemod.cpp  OFDMDemod.h  PhaseDetect.cpp  PhaseDetect.h  RealDetect.cpp  RealDetect.h  Resampler.cpp  Resampler.h  SampleProc.cpp  SampleProc.h  SampleSource.cpp  SampleSource.h  Structs.h  Subscriber.h  TakeSkip.cpp  TakeSkip.h  Transformations.cpp  Transformations.h  Utils.cpp  Utils.h  (+2 more)
